--- a/Chicken_Tracket/_CSS/index.css
+++ b/Chicken_Tracket/_CSS/index.css
@@ -1,3 +1,19 @@
-.jumbotron {
-    background-color: lightgray;
+body {
+    background-color: yellowgreen;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: white;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: yellowgreen;
+}
+
+.navbar-dark .navbar-brand:hover {
+    color: yellowgreen;
+}
+
+.conteudo {
+    background-color: blue;
 }
