--- a/Chicken_Tracket/_CSS/index.css
+++ b/Chicken_Tracket/_CSS/index.css
@@ -1,3 +1,8 @@
+html,
+body {
+    height: 100%;
+}
+
 body {
     background-color: yellowgreen;
 }
@@ -6,14 +11,19 @@ body {
     color: white;
 }
 
-.navbar-dark .navbar-nav .nav-link:hover {
-    color: yellowgreen;
-}
-
 .navbar-dark .navbar-brand:hover {
     color: yellowgreen;
 }
 
+.secao {
+    background-color: floralwhite;
+}
+
 .conteudo {
-    background-color: blue;
+    background-color: floralwhite;
+}
+
+.navbar.navbar-dark .breadcrumb .nav-item .nav-link:hover,
+.navbar.navbar-dark .navbar-nav .nav-item .nav-link:hover {
+    color: yellowgreen;
 }
