--- a/Chicken_Tracker/_CSS/index.css
+++ b/Chicken_Tracker/_CSS/index.css
@@ -1,10 +1,7 @@
-html,
 body {
+    background-color: rgb(129, 253, 111);
     height: 100%;
-}
-
-body {
-    background-color: yellowgreen;
+    padding-top: 50px;
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -16,7 +13,7 @@ body {
 }
 
 .secao {
-    background-color: floralwhite;
+    padding-top: 10px;
 }
 
 .conteudo {
@@ -26,4 +23,37 @@ body {
 .navbar.navbar-dark .breadcrumb .nav-item .nav-link:hover,
 .navbar.navbar-dark .navbar-nav .nav-item .nav-link:hover {
     color: yellowgreen;
+}
+
+.jumbotron .img {
+    margin-bottom: 0px;
+    color: #fff;
+    background: #000 url("../img/chicken.jpg") top center no-repeat;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    filter: blur(3px);
+}
+
+.jumbotron {
+    position: relative;
+}
+
+.jumbotron .container {
+    color: white;
+    position: relative;
+    z-index: 2;
+    text-shadow: 2px 2px 5px #000000;
+}
+
+@media screen and (max-width: 768px) {
+    .jumbotron {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
 }
