--- a/Chicken_Tracker/_CSS/index.css
+++ b/Chicken_Tracker/_CSS/index.css
@@ -51,13 +51,14 @@ body {
     text-shadow: 2px 2px 5px #000000;
 }
 
-.busca, .menu-departamentos{
+.busca,
+.menu-departamentos {
     box-shadow: 2px 2px 3px #000;
     background-color: #222;
     padding-top: 5px;
     color: white;
     margin-right: 10px;
-    width:15%;
+    width: 15%;
 }
 
 .busca h2,
@@ -65,18 +66,20 @@ body {
 .menu-departamentos h2 {
     margin: 10px;
 }
+
 .menu-departamentos li {
     background-color: white;
     margin-bottom: 1px;
     padding: 5px 10px;
 }
 
-.menu-departamentos li:hover, .menu-departamentos li:hover > a {
+.menu-departamentos li:hover,
+.menu-departamentos li:hover > a {
     background-color: #333333;
     color: yellowgreen;
 }
 
-.menu-departamentos li:hover  > a {
+.menu-departamentos li:hover > a {
     transition: 0.2s;
 }
 
@@ -85,9 +88,87 @@ body {
     text-decoration: none;
 }
 
-.busca input{
+.busca input {
     margin-bottom: 20px;
     color: yellowgreen;
+}
+
+/*
+ * Style tweaks
+ * --------------------------------------------------
+ */
+
+html,
+body {
+    overflow-x: hidden;
+    /* Prevent scroll on narrow devices */
+}
+
+body {
+    padding-top: 70px;
+}
+
+footer {
+    padding: 30px 0;
+}
+
+/*
+ * Off Canvas
+ * --------------------------------------------------
+ */
+
+@media screen and (max-width: 767px) {
+    .row-offcanvas {
+        position: relative;
+        -webkit-transition: all .25s ease-out;
+        -o-transition: all .25s ease-out;
+        transition: all .25s ease-out;
+    }
+
+    .row-offcanvas-right {
+        right: 0;
+    }
+
+    .row-offcanvas-left {
+        left: 0;
+    }
+
+    .row-offcanvas-right .sidebar-offcanvas {
+        right: -100%;
+        /* 12 columns */
+    }
+
+    .row-offcanvas-right.active .sidebar-offcanvas {
+        right: -50%;
+        /* 6 columns */
+    }
+
+    .row-offcanvas-left .sidebar-offcanvas {
+        left: -100%;
+        /* 12 columns */
+    }
+
+    .row-offcanvas-left.active .sidebar-offcanvas {
+        left: -50%;
+        /* 6 columns */
+    }
+
+    .row-offcanvas-right.active {
+        right: 50%;
+        /* 6 columns */
+    }
+
+    .row-offcanvas-left.active {
+        left: 50%;
+        /* 6 columns */
+    }
+
+    .sidebar-offcanvas {
+        position: absolute;
+        top: 0;
+        width: 50%;
+        /* 6 columns */
+    }
 }
 
 @media screen and (max-width: 768px) {
