--- a/Chicken_Tracker/_CSS/index.css
+++ b/Chicken_Tracker/_CSS/index.css
@@ -35,6 +35,20 @@ body {
     text-shadow: 2px 2px 5px #000000;
 }
 
+.secao {
+    padding-top: 10px;
+}
+
+.conteudo {
+    background-color: floralwhite;
+}
+
+.secao p{
+    padding-top: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .vertical-center {
   height:100%;
   width:100%;
