--- a/Chicken_Tracker/_CSS/cabecalho.css
+++ b/Chicken_Tracker/_CSS/cabecalho.css
@@ -3,14 +3,16 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
+
 /*
     Created on : 20/03/2018, 19:19:37
     Author     : user
 */
 
-.body{
-    padding-top: 50px;
+body {
+    padding-top: 60px;
 }
+
 .navbar-dark .navbar-nav .nav-link {
     color: white;
 }
