--- a/Chicken_Tracker/_CSS/index.css
+++ b/Chicken_Tracker/_CSS/index.css
@@ -1,7 +1,6 @@
 body {
     background-color: rgb(129, 253, 111);
     height: 100%;
-    padding-top: 50px;
 }
 
 .jumbotron .img {
@@ -24,7 +23,7 @@ body {
     height: 700px;
 }
 
-.jumbotron h1{
+.jumbotron h1 {
     position: relative;
 }
 
@@ -43,32 +42,37 @@ body {
     background-color: floralwhite;
 }
 
-.secao p{
+.secao p {
     padding-top: 15px;
     padding-left: 20px;
     padding-right: 20px;
 }
 
 .vertical-center {
-  height:100%;
-  width:100%;
+    height: 100%;
+    width: 100%;
 
-  text-align: center;  /* align the inline(-block) elements horizontally */
-  font: 0/0 a;         /* remove the gap between inline(-block) elements */
+    text-align: center;
+    /* align the inline(-block) elements horizontally */
+    font: 0/0 a;
+    /* remove the gap between inline(-block) elements */
 }
 
-.vertical-center:before {    /* create a full-height inline block pseudo=element */
-  content: " ";
-  display: inline-block;
-  vertical-align: middle;    /* vertical alignment of the inline element */
-  height: 100%;
+.vertical-center:before {
+    /* create a full-height inline block pseudo=element */
+    content: " ";
+    display: inline-block;
+    vertical-align: middle;
+    /* vertical alignment of the inline element */
+    height: 100%;
 }
 
 .vertical-center > .container {
-  max-width: 100%;
+    max-width: 100%;
 
-  display: inline-block;
-  vertical-align: middle;  /* vertical alignment of the inline element */
-                           /* reset the font property */
-  font: 16px/1 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    display: inline-block;
+    vertical-align: middle;
+    /* vertical alignment of the inline element */
+    /* reset the font property */
+    font: 16px/1 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
