--- a/ChickenTracker/web/css/cabecalho.css
+++ b/ChickenTracker/web/css/cabecalho.css
@@ -45,30 +45,10 @@ footer li .svg-inline--fa{
 }
 
 .vertical-center {
-    width: 100%;
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100%; /* These two lines are counted as one :-)       */
 
-    text-align: center;
-    /* align the inline(-block) elements horizontally */
-    font: 0/0 a;
-    /* remove the gap between inline(-block) elements */
-}
-
-.vertical-center:before {
-    /* create a full-height inline block pseudo=element */
-    content: " ";
-    display: inline-block;
-    vertical-align: middle;
-    /* vertical alignment of the inline element */
-    height: 100%;
-}
-
-.vertical-center > .container {
-    max-width: 100%;
-
-    display: inline-block;
-    vertical-align: middle;
-    /* vertical alignment of the inline element */
-    /* reset the font property */
-    font: 16px/1 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  display: flex;
+  align-items: center;
 }
 
