--- a/ChickenTracker/web/css/cabecalho.css
+++ b/ChickenTracker/web/css/cabecalho.css
@@ -44,6 +44,10 @@ footer li .svg-inline--fa{
     margin-top: 16px;
 }
 
+section a .svg-inline--fa{
+    margin-top: 16px;
+}
+
 .vertical-center {
   min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
   min-height: 100%; /* These two lines are counted as one :-)       */
