--- a/Chicken_Tracker/src/main/webapp/_CSS/cadastro.css
+++ b/Chicken_Tracker/src/main/webapp/_CSS/cadastro.css
@@ -18,262 +18,262 @@ body .container:first-of-type{
 
 /*DEMO*/
 .preview {
-  margin: 10px;
-  display: none;
+    margin: 10px;
+    display: none;
 }
 .preview--rounded {
-  width: 160px;
-  height: 160px;
-  border-radius: 50%;
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
 }
 /* IMMUTABLE */
 .hide {
-  display: none !important;
+    display: none !important;
 }
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 .photo__zoom {
-  position: relative;
-  padding-left: 22px;
-  padding-right: 22px;
-/**
-    * Zoom
-    */
-/**
-    * Zoom handler
-    */
-/**
-    * FOCUS
-    */
-/**
-    * Zoom track
-    */
-/**
-    * ICONS
-    */
+    position: relative;
+    padding-left: 22px;
+    padding-right: 22px;
+    /**
+        * Zoom
+        */
+    /**
+        * Zoom handler
+        */
+    /**
+        * FOCUS
+        */
+    /**
+        * Zoom track
+        */
+    /**
+        * ICONS
+        */
 }
 .photo__zoom input[type=range] {
-  -webkit-appearance: none;
-  width: 100%;
-  background: transparent;
-  height: 18px;
+    -webkit-appearance: none;
+    width: 100%;
+    background: transparent;
+    height: 18px;
 }
 .photo__zoom input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
+    -webkit-appearance: none;
 }
 .photo__zoom input[type=range]:focus {
-  outline: none;
+    outline: none;
 }
 .photo__zoom input[type=range]::-ms-track {
-  width: 100%;
-  cursor: pointer;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
+    width: 100%;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
 }
 .photo__zoom input[type=range]:focus::-ms-thumb {
-  border-color: #268eff;
-  box-shadow: 0 0 1px 0px #268eff;
+    border-color: #268eff;
+    box-shadow: 0 0 1px 0px #268eff;
 }
 .photo__zoom input[type=range]:focus::-moz-range-thumb {
-  border-color: #268eff;
-  box-shadow: 0 0 1px 0px #268eff;
+    border-color: #268eff;
+    box-shadow: 0 0 1px 0px #268eff;
 }
 .photo__zoom input[type=range]:focus::-webkit-slider-thumb {
-  border-color: #268eff;
-  box-shadow: 0 0 1px 0px #268eff;
+    border-color: #268eff;
+    box-shadow: 0 0 1px 0px #268eff;
 }
 .photo__zoom input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  margin-top: -9px;
-  box-sizing: border-box;
-  cursor: pointer;
-  width: 18px;
-  height: 18px;
-  display: block;
-  border-radius: 50%;
-  background: #eee;
-  border: 1px solid #ddd;
+    -webkit-appearance: none;
+    margin-top: -9px;
+    box-sizing: border-box;
+    cursor: pointer;
+    width: 18px;
+    height: 18px;
+    display: block;
+    border-radius: 50%;
+    background: #eee;
+    border: 1px solid #ddd;
 }
 .photo__zoom input[type=range]::-webkit-slider-thumb:hover {
-  border-color: #c1c1c1;
+    border-color: #c1c1c1;
 }
 .photo__zoom input[type=range]::-ms-thumb {
-  margin-top: 0;
-  box-sizing: border-box;
-  cursor: pointer;
-  width: 18px;
-  height: 18px;
-  display: block;
-  border-radius: 50%;
-  background: #eee;
-  border: 1px solid #ddd;
+    margin-top: 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    width: 18px;
+    height: 18px;
+    display: block;
+    border-radius: 50%;
+    background: #eee;
+    border: 1px solid #ddd;
 }
 .photo__zoom input[type=range]::-ms-thumb:hover {
-  border-color: #c1c1c1;
+    border-color: #c1c1c1;
 }
 .photo__zoom input[type=range]::-moz-range-thumb {
-  margin-top: 0;
-  box-sizing: border-box;
-  cursor: pointer;
-  width: 18px;
-  height: 18px;
-  display: block;
-  border-radius: 50%;
-  background: #eee;
-  border: 1px solid #ddd;
+    margin-top: 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    width: 18px;
+    height: 18px;
+    display: block;
+    border-radius: 50%;
+    background: #eee;
+    border: 1px solid #ddd;
 }
 .photo__zoom input[type=range]::-moz-range-thumb:hover {
-  border-color: #c1c1c1;
+    border-color: #c1c1c1;
 }
 .photo__zoom input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 1px;
-  cursor: pointer;
-  background: #eee;
-  border: 0;
+    width: 100%;
+    height: 1px;
+    cursor: pointer;
+    background: #eee;
+    border: 0;
 }
 .photo__zoom input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 1px;
-  cursor: pointer;
-  background: #eee;
-  border: 0;
+    width: 100%;
+    height: 1px;
+    cursor: pointer;
+    background: #eee;
+    border: 0;
 }
 .photo__zoom input[type=range]::-ms-track {
-  width: 100%;
-  height: 1px;
-  cursor: pointer;
-  background: #eee;
-  border: 0;
+    width: 100%;
+    height: 1px;
+    cursor: pointer;
+    background: #eee;
+    border: 0;
 }
 .photo__zoom input[type=range].zoom--minValue::before,
 .photo__zoom input[type=range].zoom--maxValue::after {
-  color: #f8f8f8;
+    color: #f8f8f8;
 }
 .photo__zoom input[type=range]::before,
 .photo__zoom input[type=range]::after {
-  position: absolute;
-  content: "\f03e";
-  display: block;
-  font-family: 'FontAwesome';
-  color: #aaa;
-  transition: color 0.3s ease;
+    position: absolute;
+    content: "\f03e";
+    display: block;
+    font-family: 'FontAwesome';
+    color: #aaa;
+    transition: color 0.3s ease;
 }
 .photo__zoom input[type=range]::after {
-  font-size: 18px;
-  right: -2px;
-  top: 2px;
+    font-size: 18px;
+    right: -2px;
+    top: 2px;
 }
 .photo__zoom input[type=range]::before {
-  font-size: 14px;
-  left: 4px;
-  top: 4px;
+    font-size: 14px;
+    left: 4px;
+    top: 4px;
 }
 /**
 * FRAME STYLE
 */
 .photo__frame--circle {
-  border: 1px solid #e2e2e2;
-  border-radius: 50%;
+    border: 1px solid #e2e2e2;
+    border-radius: 50%;
 }
 .photo__helper {
-  position: relative;
-  background-repeat: no-repeat;
-  background-color: transparent;
-  padding: 15px 0;
+    position: relative;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    padding: 15px 0;
 }
 .photo__helper .canvas--helper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 .photo__frame img,
 .photo__helper {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .profile {
-  position: relative;
-  font-family: 'HelveticaNeueLTPro-Roman', sans-serif;
-  font-size: 85%;
+    position: relative;
+    font-family: 'HelveticaNeueLTPro-Roman', sans-serif;
+    font-size: 85%;
 }
 .photo {
-  text-align: center;
-  margin-bottom: 15px;
+    text-align: center;
+    margin-bottom: 15px;
 }
 .photo input[type=file] {
-  display: none;
+    display: none;
 }
 .photo__options {
-  margin-top: 15px;
-  position: relative;
-  text-align: left;
+    margin-top: 15px;
+    position: relative;
+    text-align: left;
 }
 .photo__options .remove {
-  padding: 0;
-  padding: 0;
-  display: inline-block;
-  text-decoration: none;
-  color: #ddd;
-  font-size: 18px;
-  width: 20%;
-  text-align: center;
-  vertical-align: middle;
+    padding: 0;
+    padding: 0;
+    display: inline-block;
+    text-decoration: none;
+    color: #ddd;
+    font-size: 18px;
+    width: 20%;
+    text-align: center;
+    vertical-align: middle;
 }
 .photo__options .remove:hover {
-  color: #000;
+    color: #000;
 }
 .photo__zoom {
-  vertical-align: middle;
-  width: 80%;
-  display: inline-block;
+    vertical-align: middle;
+    width: 80%;
+    display: inline-block;
 }
 .photo__frame {
-  cursor: move;
-  overflow: hidden;
-  position: relative;
-  display: inline-block;
-  width: 160px;
-  height: 160px;
+    cursor: move;
+    overflow: hidden;
+    position: relative;
+    display: inline-block;
+    width: 160px;
+    height: 160px;
 }
 .photo__frame img,
 .photo__helper img {
-  position: relative;
+    position: relative;
 }
 .photo__frame .message {
-  position: absolute;
-  left: 5px;
-  right: 5px;
-  top: 50%;
-  transform: translateY(-50%);
-  display: inline-block;
-  color: #268eff;
-  z-index: 3;
+    position: absolute;
+    left: 5px;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: inline-block;
+    color: #268eff;
+    z-index: 3;
 }
 .photo__frame .is-dragover {
-  display: none;
+    display: none;
 }
 .message p {
-  font-size: 0.9em;
+    font-size: 0.9em;
 }
 .photo__options {
-  list-style: none;
+    list-style: none;
 }
 .photo__options li {
-  display: inline-block;
-  text-align: center;
-  width: 50%;
+    display: inline-block;
+    text-align: center;
+    width: 50%;
 }
 .photo--empty .photo__frame {
-  cursor: pointer;
+    cursor: pointer;
 }
 /**
 * IMG states
@@ -284,7 +284,7 @@ body .container:first-of-type{
 .photo--error--file-type img,
 .photo--error--image-size img,
 .photo--loading img {
-  display: none;
+    display: none;
 }
 /**
 * States
@@ -292,21 +292,21 @@ body .container:first-of-type{
 /** SELECT PHOTO MESSAGE */
 .message--desktop,
 .message--mobile {
-  display: none;
+    display: none;
 }
 /* MOBILE */
 .is-mobile .message--mobile {
-  display: inline-block;
+    display: inline-block;
 }
 .is-mobile .message--desktop {
-  display: none;
+    display: none;
 }
 /* DESKTOP */
 .is-desktop .message--desktop {
-  display: inline-block;
+    display: inline-block;
 }
 .is-desktop .message--mobile {
-  display: none;
+    display: none;
 }
 /* DEFAULT */
 .message.is-empty,
@@ -315,31 +315,31 @@ body .container:first-of-type{
 .message.is-wrong-image-size,
 .message.is-something-wrong,
 .message.is-dragover {
-  display: none;
+    display: none;
 }
 /* EMPTY */
 .photo--empty .photo__options {
-  display: none;
+    display: none;
 }
 .photo--empty .message.is-empty {
-  display: inline-block;
+    display: inline-block;
 }
 .photo--empty .photo__frame:hover {
-  background: #268eff;
+    background: #268eff;
 }
 .photo--empty .photo__frame:hover .message {
-  color: #fff;
+    color: #fff;
 }
 /* LOADING */
 .photo--loading .message.is-loading {
-  display: inline-block;
+    display: inline-block;
 }
 .photo--loading .message.is-empty,
 .photo--loading .message.is-wrong-file-type,
 .photo--loading .message.is-dragover,
 .photo--loading .message.is-wrong-image-size,
 .photo--loading .photo__options {
-  display: none;
+    display: none;
 }
 /* ERROR */
 /* UNKNOWN */
@@ -348,10 +348,10 @@ body .container:first-of-type{
 .photo--error .message.is-dragover,
 .photo--error .message.is-wrong-image-size,
 .photo--error .photo__options {
-  display: none;
+    display: none;
 }
 .photo--error .message.is-something-wrong {
-  display: inline-block;
+    display: inline-block;
 }
 /* FILE TYPE*/
 .photo--error--file-type .message.is-empty,
@@ -359,10 +359,10 @@ body .container:first-of-type{
 .photo--error--file-type .message.is-dragover,
 .photo--error--file-type .message.is-wrong-image-size,
 .photo--error--file-type .photo__options {
-  display: none;
+    display: none;
 }
 .photo--error--file-type .message.is-wrong-file-type {
-  display: inline-block;
+    display: inline-block;
 }
 /* IMAGE SIZE */
 .photo--error--image-size .message.is-empty,
@@ -370,63 +370,129 @@ body .container:first-of-type{
 .photo--error--image-size .message.is-dragover,
 .photo--error--image-size .message.is-wrong-file-type,
 .photo--error--image-size .photo__options {
-  display: none;
+    display: none;
 }
 .photo--error--image-size .message.is-wrong-image-size {
-  display: inline-block;
+    display: inline-block;
 }
 /* DRAGOVER */
 .profile.is-dragover .photo__frame .is-dragover {
-  display: inline-block;
+    display: inline-block;
 }
 .profile.is-dragover .message.is-empty,
 .profile.is-dragover .message.is-loading,
 .profile.is-dragover .message.is-wrong-file-type,
 .profile.is-dragover .message.is-wrong-image-size {
-  display: none;
+    display: none;
 }
 
-@media (min-width: 768px) {
-  .form-search .combobox-container,
-  .form-inline .combobox-container {
-    display: inline-block;
-    margin-bottom: 0;
-    vertical-align: top;
-  }
-  .form-search .combobox-container .input-group-addon,
-  .form-inline .combobox-container .input-group-addon {
-    width: auto;
-  }
+/* ///  DECORATION CSS ///  */
+.cont_select_center {
+    position: absolute;
+    left: 50%;
+    top:50%;
+    margin-top: -30px;
+    margin-left: -150px;
 }
-.combobox-selected .caret {
-  display: none;
+
+.cont_heg_50 {
+    position: absolute;
+    height: 50%;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background-color: #fd7b52;
 }
-/* :not doesn't work in IE8 */
-.combobox-container:not(.combobox-selected) .glyphicon-remove {
-  display: none;
+/* ///  END DECORATION CSS  ///  */
+
+.icon_select_mate {
+    position: absolute;
+    top:20px;
+    right: 2%;
+    font-size: 16px;
+    height: 22px;
+    transition: all 275ms;
 }
-.typeahead-long {
-  max-height: 300px;
-  overflow-y: auto;
+
+.select_mate {
+    position: relative;
+    float: left;
+    min-width: 300px;
+    width: 300px;
+    min-height: 60px;
+    font-family: 'Roboto';
+    color: #777;
+    font-weight: 300;
+    background-color: #fff;
+    box-shadow: 1px 2px 10px -2px rgba(0,0,0,0.3);
+    border-radius: 3px;
+    transition: all 375ms ease-in-out;
+    /* Oculto el elemento select */
+    select {
+        position: absolute;
+        overflow: hidden;
+        height: 0px;
+        opacity: 0;  
+        z-index: -1;
+    }
 }
-.control-group.error .combobox-container .add-on {
-  color: #B94A48;
-  border-color: #B94A48;
+
+.cont_list_select_mate {
+    position: relative;
+    float: left;
+    width: 100%;
 }
-.control-group.error .combobox-container .caret {
-  border-top-color: #B94A48;
+
+.cont_select_int {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 999;
+    overflow: hidden;
+    height: 0px;
+    width: 100%;
+    background-color: #fff;
+    padding: 0px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    border-radius: 0px 0px 3px 3px;
+    box-shadow: 1px 4px 10px -2px rgba(0, 0, 0, 0.2);
+    transition: all 375ms ease-in-out;
+
+    li {
+        position: relative;
+        float: left;
+        width: 96%;
+        border-bottom:1px solid #E0E0E0;
+        background-color: #F5F5F5;
+        list-style-type: none;
+        padding: 10px 2%;
+        margin: 0px;  
+        transition: all 275ms ease-in-out;
+        display: block;
+        cursor:pointer;
+
+        &:last-child {
+            border-radius: 3px;
+            border-bottom:0px; 
+
+        }
+        &:hover {
+            background-color: #EEEEEE;
+        } 
+    }
+
+    .active {
+        background-color: #EEEEEE;
+    }
+
 }
-.control-group.warning .combobox-container .add-on {
-  color: #C09853;
-  border-color: #C09853;
-}
-.control-group.warning .combobox-container .caret {
-  border-top-color: #C09853;
-}
-.control-group.success .combobox-container .add-on {
-  color: #468847;
-  border-color: #468847;
-}
-.control-group.success .combobox-container .caret {
-  border-top-color: #468847;
+
+/* etiqueta <p> con la opcion selecionada  */
+.selecionado_opcion {
+    padding: 20px 2%;
+    width: 96%;
+    display: block;
+    margin: 0px;
+    cursor: pointer;
 }
