--- a/Chicken_Tracker/src/main/webapp/_CSS/menu.css
+++ b/Chicken_Tracker/src/main/webapp/_CSS/menu.css
@@ -10,7 +10,7 @@ and open the template in the editor.
 */
 
 body {
-    padding-top: 57px;
+    padding-top: 56px;
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -65,19 +65,50 @@ section a .svg-inline--fa{
 }
 
 .vertical-center {
-  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-  min-height: 100%; /* These two lines are counted as one :-)       */
+    min-width: 100%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 100%; /* These two lines are counted as one :-)       */
 
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
-.fixed-bottom {
-  position: relative;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1030;
-  bottom: 0;
+#btn-topo{
+    position: fixed;
+    z-index: 2000;
+    right:50px;
+    bottom:50px;
+    border-radius: 50%;
 }
 
+.pagination>li>a, .pagination>li>span { border-radius: 50% !important;margin: 0 5px;}
+
+.fixed-action-btn .svg-inline--fa{
+    margin-top: 16px;
+}
+
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    border-radius: 15px;
+}
+
+.btn-circle.btn-lg {
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 25px;
+}
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 35px;
+}
