--- a/Chicken_Tracker/src/main/webapp/_CSS/seu_negocio.css
+++ b/Chicken_Tracker/src/main/webapp/_CSS/seu_negocio.css
@@ -7,45 +7,6 @@ and open the template in the editor.
     Created on : 20/03/2018, 19:17:22
     Author     : user
 */
-
-.busca,
-.menu-departamentos {
-    box-shadow: 2px 2px 3px #000;
-    background-color: #222;
-    padding-top: 5px;
-    color: white;
-    margin-right: 10px;
-    width: 15%;
-}
-
-.busca h2,
-.busca form,
-.menu-departamentos h2 {
-    margin: 10px;
-}
-
-.menu-departamentos li {
-    background-color: white;
-    margin-bottom: 1px;
-    padding: 5px 10px;
-}
-
-.menu-departamentos li:hover,
-.menu-departamentos li:hover > a {
-    background-color: #333333;
-    color: yellowgreen;
-}
-
-.menu-departamentos li:hover > a {
-    transition: 0.2s;
-}
-
-.menu-departamentos a {
-    color: #333333;
-    text-decoration: none;
-}
-
-.busca input {
-    margin-bottom: 20px;
-    color: yellowgreen;
+table th label{
+    margin-top: 7px !important;
 }
