--- a/Chicken_Tracker/src/main/webapp/Bootstrap/_CSS/bootstrap.css
+++ b/Chicken_Tracker/src/main/webapp/Bootstrap/_CSS/bootstrap.css
@@ -599,7 +599,7 @@ pre code {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  /*margin-right: -15px; */
+  margin-right: -15px;
   margin-left: -15px;
 }
 
@@ -5893,30 +5893,6 @@ button.close {
   transform: translateX(0);
 }
 
-.align-baseline {
-  vertical-align: baseline !important;
-}
-
-.align-top {
-  vertical-align: top !important;
-}
-
-.align-middle {
-  vertical-align: middle !important;
-}
-
-.align-bottom {
-  vertical-align: bottom !important;
-}
-
-.align-text-bottom {
-  vertical-align: text-bottom !important;
-}
-
-.align-text-top {
-  vertical-align: text-top !important;
-}
-
 @supports ((-webkit-transform-style: preserve-3d) or (transform-style: preserve-3d)) {
   .carousel-item-next.carousel-item-left,
   .carousel-item-prev.carousel-item-right {
@@ -6072,6 +6048,30 @@ button.close {
   padding-bottom: 20px;
   color: #fff;
   text-align: center;
+}
+
+.align-baseline {
+  vertical-align: baseline !important;
+}
+
+.align-top {
+  vertical-align: top !important;
+}
+
+.align-middle {
+  vertical-align: middle !important;
+}
+
+.align-bottom {
+  vertical-align: bottom !important;
+}
+
+.align-text-bottom {
+  vertical-align: text-bottom !important;
+}
+
+.align-text-top {
+  vertical-align: text-top !important;
 }
 
 .bg-primary {
