--- a/Chicken_Tracker/src/main/webapp/_CSS/cabecalho.css
+++ b/Chicken_Tracker/src/main/webapp/_CSS/cabecalho.css
@@ -29,16 +29,18 @@ body {
 .dropdown .dropdown-menu.dropdown-dark .dropdown-item:active,
 .dropdown .dropdown-menu.dropdown-dark .dropdown-item:hover {
     color: yellowgreen !important;
+    background-color: black !important;
 }
 
 .dropdown-dark .dropdown-content li a,
 .dropdown-dark .dropdown-content li span:hover,
 .dropdown-dark .dropdown-content li.active {
     color: yellowgreen !important;
+    background-color: black !important;
 }
 
 .dropdown-dark .search-wrap input:focus {
-    border-bottom: 1px solid #2e2e2e;
+    border-bottom: 1px solid #2e2e2e !important;
     box-shadow: 0 1px 0 0 #2e2e2e
 }
 
@@ -112,3 +114,4 @@ section a .svg-inline--fa{
     line-height: 1.33;
     border-radius: 35px;
 }
+
