--- a/Chicken_Tracker/src/main/webapp/Bootstrap/_CSS/mdb.css
+++ b/Chicken_Tracker/src/main/webapp/Bootstrap/_CSS/mdb.css
@@ -8697,6 +8697,269 @@ html [type=button] {
     font-weight: 400;
 }
 
+.card.card-image {
+    background-size: cover;
+    background-position: center;
+    width: 100%
+}
+
+.card.card-image [class*=rgba-] {
+    border-radius: .25rem
+}
+
+.card.card-cascade .view {
+    border-radius: .25rem
+}
+
+.card.card-cascade .view.gradient-card-header {
+    padding: 1.6rem 1rem;
+    text-align: center
+}
+
+.card.card-cascade .view.gradient-card-header h2 {
+    font-weight: 400
+}
+
+.card.card-cascade .view.gradient-card-header .btn-floating {
+    background-color: rgba(255, 255, 255, .2)
+}
+
+.card.card-cascade .card-body {
+    padding-top: 1.8rem
+}
+
+.card.card-cascade.wider {
+    background-color: transparent
+}
+
+.card.card-cascade.wider .view {
+    z-index: 2
+}
+
+.card.card-cascade.wider .card-body {
+    margin-left: 4%;
+    margin-right: 4%;
+    background: #fff;
+    z-index: 1;
+    border-radius: 0 0 .25rem .25rem
+}
+
+.card.card-cascade.wider.reverse .card-body {
+    z-index: 3;
+    margin-top: -1rem;
+    border-radius: 4px
+}
+
+.card.card-cascade.narrower {
+    margin-top: 20px
+}
+
+.card.card-cascade.narrower .view {
+    margin-left: 4%;
+    margin-right: 4%;
+    margin-top: -20px
+}
+
+.card.card-cascade.panel-cascade .view {
+    text-align: center;
+    color: #fff
+}
+
+.card.card-cascade.panel-cascade .list-group .list-group-item {
+    margin-bottom: 0;
+    border: 0;
+    border-bottom: 1px solid #eee;
+    color: #495057
+}
+
+.card.card-cascade.panel-cascade .list-group .list-group-item:hover {
+    background-color: #eee
+}
+
+.card .btn-action {
+    margin-top: -23px;
+    margin-bottom: -23px
+}
+
+.card .activator {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 1.2rem
+}
+
+.card .card-reveal {
+    position: absolute;
+    width: 100%;
+    overflow-y: auto;
+    top: 100%;
+    height: 100%;
+    z-index: 1;
+    display: none
+}
+
+.card .card-reveal .card-title {
+    cursor: pointer
+}
+
+.card .card-reveal .card-title i {
+    color: #9e9e9e;
+    position: absolute;
+    right: 10px
+}
+
+.card .card-reveal .content {
+    position: relative
+}
+
+.card .card-reveal .content h4 {
+    margin-top: 20px;
+    margin-bottom: 15px
+}
+
+.card .card-reveal .content h5 {
+    margin-top: 30px
+}
+
+.card.ovf-hidden {
+    overflow: hidden
+}
+
+.card .card-share {
+    position: relative
+}
+
+.card .card-share .social-reveal {
+    position: absolute;
+    top: -23px;
+    right: 30px;
+    visibility: hidden;
+    width: auto;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-transition: -webkit-transform .35s ease;
+    transition: -webkit-transform .35s ease;
+    transition: transform .35s ease;
+    transition: transform .35s ease, -webkit-transform .35s ease
+}
+
+.card .card-share .social-reveal-active {
+    z-index: 11;
+    visibility: visible;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-transform: translateX(-48px);
+    -ms-transform: translateX(-48px);
+    transform: translateX(-48px);
+    -webkit-transition: -webkit-transform .35s ease;
+    transition: -webkit-transform .35s ease;
+    transition: transform .35s ease;
+    transition: transform .35s ease, -webkit-transform .35s ease
+}
+
+.card-wrapper {
+    margin: 0;
+    min-height: 500px;
+    position: relative;
+    -webkit-perspective: 800px;
+    perspective: 800px
+}
+
+.card-wrapper img {
+    max-width: 100%
+}
+
+.card-wrapper .face {
+    position: absolute;
+    width: 100%;
+    height: 100%
+}
+
+.card-wrapper .card-up {
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
+    overflow: hidden;
+    height: 50%
+}
+
+.card-wrapper .card-up img {
+    min-width: 400px
+}
+
+.card-wrapper .avatar {
+    display: block;
+    margin-top: -65px;
+    overflow: hidden;
+    width: 120px
+}
+
+.card-wrapper .avatar img {
+    border: 5px solid #fff;
+    background: none repeat scroll 0 0 #fff;
+    width: 100%
+}
+
+.card-wrapper .card-rotating {
+    position: absolute;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d
+}
+
+.card-wrapper .card-rotating .content {
+    position: relative
+}
+
+.card-wrapper .card-rotating.effect__click.flipped .front {
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg)
+}
+
+.card-wrapper .card-rotating.effect__click.flipped .back {
+    -webkit-transform: rotateY(0);
+    transform: rotateY(0)
+}
+
+.card-wrapper .back,
+.card-wrapper .front {
+    border-radius: .25rem;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transition: 1s;
+    transition: 1s
+}
+
+.card-wrapper .back {
+    -webkit-transform: rotateY(-180deg);
+    transform: rotateY(-180deg)
+}
+
+.testimonial-card .card-up {
+    overflow: hidden;
+    height: 120px;
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem
+}
+
+.testimonial-card .avatar {
+    border-radius: 50%;
+    width: 120px;
+    margin-top: -65px;
+    overflow: hidden;
+    border: 5px solid #fff
+}
+
+.testimonial-card .avatar img {
+    width: 100%
+}
+
+.testimonial-card .card-body {
+    text-align: center
+}
+
+
 .dropdown .dropdown-menu .dropdown-item:active {
     background-color: #757575;
 }
@@ -9459,16 +9722,6 @@ body.scrollable {
     -webkit-transform: translateX(0);
     -ms-transform: translateX(0);
     transform: translateX(0);
-}
-@supports ((-webkit-transform-style: preserve-3d) or (transform-style: preserve-3d)) {
-    .carousel-fade .carousel-item-next,
-    .carousel-fade .carousel-item-prev,
-    .carousel-fade .carousel-item.active,
-    .carousel-fade .carousel-item-left.active,
-    .carousel-fade .carousel-item-prev.active {
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-}
 }
 
 .md-form {
@@ -10375,6 +10628,70 @@ table.table-sm td {
     padding-bottom: 0.6rem;
 }
 
+@media (max-width:575.98px) {
+    .table-responsive-sm {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar
+    }
+    .table-responsive-sm > .table-bordered {
+        border: 0
+    }
+}
+
+@media (max-width:767.98px) {
+    .table-responsive-md {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar
+    }
+    .table-responsive-md > .table-bordered {
+        border: 0
+    }
+}
+
+@media (max-width:991.98px) {
+    .table-responsive-lg {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar
+    }
+    .table-responsive-lg > .table-bordered {
+        border: 0
+    }
+}
+
+@media (max-width:1199.98px) {
+    .table-responsive-xl {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar
+    }
+    .table-responsive-xl > .table-bordered {
+        border: 0
+    }
+}
+
+.table-responsive {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar
+}
+
+.table-responsive > .table-bordered {
+    border: 0
+}
+
 .view .full-bg-img {
     height: 100%;
 }
@@ -10392,4 +10709,16 @@ table.table-sm td {
 .full-height header,
 .full-height header .view {
     height: 100%;
+}
+
+
+@supports ((-webkit-transform-style: preserve-3d) or (transform-style: preserve-3d)) {
+    .carousel-fade .carousel-item-next,
+    .carousel-fade .carousel-item-prev,
+    .carousel-fade .carousel-item.active,
+    .carousel-fade .carousel-item-left.active,
+    .carousel-fade .carousel-item-prev.active {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+}
 }
