--- a/Chicken_Tracker/src/main/webapp/_CSS/cadastro.css
+++ b/Chicken_Tracker/src/main/webapp/_CSS/cadastro.css
@@ -12,6 +12,10 @@ and open the template in the editor.
     margin-top: 40px;
 }
 
+body{
+    background-color: #eeeeee;
+}
+
 body .container:first-of-type{
     margin-top: 20px;
 }
