--- a/Chicken_Tracker/src/main/webapp/_CSS/cadastro.css
+++ b/Chicken_Tracker/src/main/webapp/_CSS/cadastro.css
@@ -16,7 +16,7 @@ body{
     background-color: #eeeeee;
 }
 
-body .container:first-of-type{
+body + .container:first-of-type{
     margin-top: 20px;
 }
 
