--- a/Chicken_Tracker/src/main/webapp/_CSS/cadastro.css
+++ b/Chicken_Tracker/src/main/webapp/_CSS/cadastro.css
@@ -8,7 +8,7 @@ and open the template in the editor.
     Author     : user
 */
 
-.container form{
+.container card :first-child form{
     margin-top: 40px;
 }
 
