--- a/Chicken_Tracker/src/main/webapp/Bootstrap/_CSS/mdb.css
+++ b/Chicken_Tracker/src/main/webapp/Bootstrap/_CSS/mdb.css
@@ -7366,6 +7366,38 @@ html [type=button] {
     border-radius: 10em
 }
 
+.rounded {
+    border-radius: .25rem!important
+}
+
+.rounded-top {
+    border-top-left-radius: .25rem!important;
+    border-top-right-radius: .25rem!important
+}
+
+.rounded-right {
+    border-top-right-radius: .25rem!important;
+    border-bottom-right-radius: .25rem!important
+}
+
+.rounded-bottom {
+    border-bottom-right-radius: .25rem!important;
+    border-bottom-left-radius: .25rem!important
+}
+
+.rounded-left {
+    border-top-left-radius: .25rem!important;
+    border-bottom-left-radius: .25rem!important
+}
+
+.rounded-circle {
+    border-radius: 50%!important
+}
+
+.rounded-0 {
+    border-radius: 0!important
+}
+
 .btn.purple-gradient {
     -webkit-transition: .5s ease;
     transition: .5s ease;
