--- a/Chicken_Tracker/src/main/webapp/_CSS/cabecalho.css
+++ b/Chicken_Tracker/src/main/webapp/_CSS/cabecalho.css
@@ -117,3 +117,10 @@ section a .svg-inline--fa{
     border-radius: 35px;
 }
 
+
+#fotoCabecalho{
+    width: 35px;
+    height:35px;
+    border-radius: 50%;
+}
+
