--- a/Chicken_Tracker/src/main/webapp/_CSS/seu_negocio.css
+++ b/Chicken_Tracker/src/main/webapp/_CSS/seu_negocio.css
@@ -17,3 +17,7 @@ table.btn-table th label{
 #tableEstabelecimento tr:first-child td {
     border: none;
 }
+
+td a:hover{
+    text-decoration: underline;
+}
